# Neuralens-AI-based-product-image-search

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README backend.md  config.py  main.py  pyproject.toml
backend/core/: exceptions.py  logging.py
backend/database/: db.py  model.py
backend/routers/: ai.py
backend/schemas/: schema.py
backend/services/: assistent_service.py  camera_service.py  image_service.py  lens_service.py  scraper_service.py  search_service.py
backend/tests/: test_api.py  test_assistent.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BoundingBoxOverlay.tsx  CameraModal.tsx  ChatMarkdown.tsx  ChatPanel.tsx  LoadingSpinner.tsx  Logo.tsx  PriceGrid.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: HomePage.tsx  ResultsPage.tsx
frontend/src/types/: index.ts
