[project]
name = "ai-based-product-image-search"
version = "2.0.0"
description = "Production-grade AI product image search with Google Shopping-style results"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.137.0",
    "huggingface-hub>=1.19.0",
    "httpx>=0.28.0",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "pillow>=12.2.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
